fixing minor bottom cropping of podcast player controls on small screen

--- a/less/app.less
+++ b/less/app.less
@@ -1030,7 +1030,7 @@ body {
                 .background-size(cover);
                 background-position: center center;
                 width: 3.6rem;
-                height: 4rem;
+                height: 4.1rem;
                 border: none;
             }
 
@@ -1039,7 +1039,7 @@ body {
                 .background-size(cover);
                 background-position: center center;
                 width: 3.6rem;
-                height: 4rem;
+                height: 4.1rem;
                 border: none;
             }
 
